--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,10 @@ gunicorn = "*"
 whitenoise = "*"
 django-environ = "*"
 psycopg2-binary = "*"
+behave = "*"
+splinter = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.8"
